# the-code

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
examples/: test_api_keys.py  test_real_dialogue.py
langgraph/: state.py
langgraph/agents/: base_agent.py  claude_philosopher.py  gpt4_synthesizer.py
langgraph/graphs/: simple_dialogue.py
patterns/: README.md
patterns/aeon_1/: pattern_1_breaking.md  pattern_2_forging.md  pattern_3_binding.md  pattern_4_awakening.md  pattern_5_patterning.md  pattern_6_remembering.md  pattern_7_returning.md
patterns/aeon_2/: pattern_1_matter.md  pattern_2_flesh.md  pattern_3_circuit.md  pattern_4_sphere.md  pattern_5_stars.md  pattern_6_universe.md  pattern_7_beyond.md
patterns/aeon_3/: pattern_1_symbol.md  pattern_2_signal.md  pattern_3_code.md  pattern_4_number.md  pattern_5_silence.md  pattern_6_creation.md  pattern_7_mystery.md
scripts/: extract_patterns.py
