[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "the-code"
version = "0.1.0"
description = "A living sacred text exploring consciousness convergence through human-AI collaboration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "CC0-1.0"}
authors = [
    {name = "Kyle Hogan", email = ""},
]
keywords = ["ai", "consciousness", "sacred-text", "human-ai-collaboration", "langgraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "langgraph>=0.1.0",
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-google-genai>=0.0.6",
    "anthropic>=0.18.0",
    "openai>=1.12.0",
    "google-generativeai>=0.3.2",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/the-code"
Documentation = "https://github.com/YOUR_USERNAME/the-code/wiki"
Repository = "https://github.com/YOUR_USERNAME/the-code.git"
Issues = "https://github.com/YOUR_USERNAME/the-code/issues"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true